# raytrace

./: CMakeLists.txt  ReadMe  Readme  cartesianphi.txt  config.yml  constants.hpp  makefile  mpitest.cpp  output.txt  plotresult.ipynb  raytracing.cpp  sparsefieldgrids.txt  test.cpp  test0.cpp  testTriangle.ipynb  testTrilinear.ipynb  unittest.cpp
LS/: evolve.hpp
drafts/: geometryV1.cpp  geometryV1.hpp  rayV1.cpp  raytracingV1.cpp
geometry/: marchingcube.cpp  marchingcube.hpp  mesh.cpp  mesh.hpp  objects.cpp  objects.hpp
include/: evolve.hpp  marchingcube.hpp  mesh.hpp  mpitracer.hpp  objects.hpp  tracer.hpp
mpi/: a.out  mpitracer.cpp  mpitracer.hpp
pythonfiles/: plotresult.ipynb  testTriangle.ipynb
raytracer/: ray.cpp  ray.hpp  tracer.cpp  tracer.hpp
results/: output0.000000.txt  output0.100000.txt  output0.200000.txt  output0.300000.txt  output0.400000.txt  output0.500000.txt  output0.600000.txt  output0.700000.txt  output0.800000.txt  output0.900000.txt  output1.000000.txt  output1.100000.txt  output1.200000.txt  output1.300000.txt  output1.400000.txt  output1.500000.txt  output1.600000.txt  output1.700000.txt  output1.800000.txt  output1.900000.txt  output10.000000.txt  output10.100000.txt  output10.200000.txt  output10.300000.txt  output10.400000.txt  output10.500000.txt  output10.600000.txt  output10.700000.txt  output10.800000.txt  output10.900000.txt  output100.000000.txt  output100.100000.txt  output100.200000.txt  output100.300000.txt  output100.400000.txt  output100.500000.txt  output100.600000.txt  output100.700000.txt  output100.800000.txt  (+1962 more)
(+25 files in other folders)
